--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -34,8 +34,8 @@ jobs:
          - { name: "PyFluent", runner: "ubuntu-latest", markers: "requires_fluent", needs_fluent: true }
    steps:
 
-     - name: Checkout project
-       uses: actions/checkout@v4
+     - name: "Checkout the project"
+       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
      - name: "Set up uv"
        uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 # v5.4.1
@@ -50,7 +50,7 @@ jobs:
          ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
 
      - name: Login to GitHub Container Registry
-       uses: docker/login-action@v3
+       uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
        if: matrix.tests.needs_fluent
        with:
          registry: ghcr.io
@@ -82,7 +82,7 @@ jobs:
     steps:
 
       - name: "Checkout the project"
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: "Install Python ${{ env.MAIN_PYTHON_VERSION }}"
         uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 # v5.4.1
@@ -116,7 +116,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: doc-build
     steps:
-      - uses: ansys/actions/doc-deploy-dev@v9
+      - uses: ansys/actions/doc-deploy-dev@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           doc-artifact-name: "documentation-html"
           cname: ${{ env.DOCUMENTATION_CNAME }}
