--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -28,15 +28,15 @@ jobs:
       pull-requests: write
     runs-on: ubuntu-latest
     steps:
-     - uses: actions/checkout@v4
+     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
      - name: "Update labels"
-       uses: micnncim/action-label-syncer@v1
+       uses: micnncim/action-label-syncer@3abd5ab72fda571e69fffd97bd4e0033dd5f495c # v1.3.0
        env:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
      - name: "Label pull-request"
-       uses: actions/labeler@v5.0.0
+       uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
        with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -49,11 +49,11 @@ jobs:
       pull-requests: write
     steps:
 
-      - uses: ansys/actions/check-pr-title@main
+      - uses: ansys/actions/check-pr-title@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: ansys/actions/doc-changelog@main
+      - uses: ansys/actions/doc-changelog@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
           use-conventional-commits: true
@@ -66,7 +66,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: changelog-fragment
     steps:
-      - uses: ansys/actions/code-style@v9
+      - uses: ansys/actions/code-style@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
@@ -75,8 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: changelog-fragment
     steps:
-      - name: "Running documentation style checks"
-        uses: ansys/actions/doc-style@v9
+      - uses: ansys/actions/doc-style@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -90,7 +89,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.11', '3.12']
     steps:
-      - uses: ansys/actions/build-wheelhouse@v9
+      - uses: ansys/actions/build-wheelhouse@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           operating-system: ${{ matrix.os }}
@@ -104,7 +103,7 @@ jobs:
     steps:
 
       - name: "Checkout the project"
-        uses: actions/checkout@v4
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: "Install Python ${{ env.MAIN_PYTHON_VERSION }}"
         uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 # v5.4.1
@@ -147,8 +146,8 @@ jobs:
           - { name: "PyFluent", runner: "ubuntu-latest", markers: "requires_fluent", needs_fluent: true }
     steps:
 
-      - name: Checkout project
-        uses: actions/checkout@v4
+      - name: "Checkout the project"
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
       - name: "Set up uv"
         uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 # v5.4.1
@@ -163,7 +162,7 @@ jobs:
           ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         if: matrix.tests.needs_fluent
         with:
           registry: ghcr.io
@@ -194,7 +193,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [wheelhouse, doc-build, tests]
     steps:
-      - uses: ansys/actions/build-library@v9
+      - uses: ansys/actions/build-library@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
