--- a/.github/workflows/ci_cd_release.yml
+++ b/.github/workflows/ci_cd_release.yml
@@ -42,7 +42,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: changelog-deployment
     steps:
-      - uses: ansys/actions/code-style@v9
+      - uses: ansys/actions/code-style@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
@@ -52,7 +52,7 @@ jobs:
     needs: changelog-deployment
     steps:
       - name: "Running documentation style checks"
-        uses: ansys/actions/doc-style@v9
+        uses: ansys/actions/doc-style@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -66,7 +66,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         python-version: ['3.11', '3.12']
     steps:
-      - uses: ansys/actions/build-wheelhouse@v9
+      - uses: ansys/actions/build-wheelhouse@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           operating-system: ${{ matrix.os }}
@@ -124,7 +124,7 @@ jobs:
    steps:
 
      - name: Checkout project
-       uses: actions/checkout@v4
+       uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
 
      - name: "Set up uv"
        uses: astral-sh/setup-uv@0c5e2b8115b80b4c7c5ddf6ffdd634974642d182 # v5.4.1
@@ -139,7 +139,7 @@ jobs:
          ANSYS_VERSION : ${{ env.ANSYS_VERSION }}
 
      - name: Login to GitHub Container Registry
-       uses: docker/login-action@v3
+       uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
        if: matrix.tests.needs_fluent
        with:
          registry: ghcr.io
@@ -170,7 +170,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [wheelhouse, doc-build, tests]
     steps:
-      - uses: ansys/actions/build-library@v9
+      - uses: ansys/actions/build-library@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
@@ -188,14 +188,27 @@ jobs:
           path: ${{ env.LIBRARY_NAME }}-artifacts
 
       - name: "Release to private PyPI repository"
-        uses: ansys/actions/release-pypi-private@v9
+        uses: ansys/actions/release-pypi-private@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           twine-username: "__token__"
           twine-token: ${{ secrets.PYANSYS_PYPI_PRIVATE_PAT }}
 
       - name: Release to GitHub
-        uses: ansys/actions/release-github@v9
+        uses: ansys/actions/release-github@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
         with:
           library-name: ${{ env.LIBRARY_NAME }}
           token: ${{ secrets.GITHUB_TOKEN }}
+
+  doc-deploy-stable:
+    name: "Deploy stable docs"
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - uses: ansys/actions/doc-deploy-stable@b666c18ca3623198a1be4cf46f4522736527fee9 # v9.0.0
+        with:
+          doc-artifact-name: "documentation-html"
+          cname: ${{ env.DOCUMENTATION_CNAME }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
