--- a/.github/workflows/ci_cd_release.yml
+++ b/.github/workflows/ci_cd_release.yml
@@ -14,7 +14,7 @@ env:
   ANSYS_VERSION: '241'
   ANSYS_DPF_ACCEPT_LA: 'Y'
   MAIN_PYTHON_VERSION: '3.11'
-  DOCUMENTATION_CNAME: 'heart.docs.pyansys.com'
+  DOCUMENTATION_CNAME: 'heart.health.docs.pyansys.com'
   LIBRARY_NAME: 'ansys-heart'
   ANSYSLMD_LICENSE_FILE: ${{ format('1055@{0}', secrets.LICENSE_SERVER) }}
   PYFLUENT_START_INSTANCE: 0
