--- a/tox.ini
+++ b/tox.ini
@@ -72,6 +72,10 @@ commands =
     clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:BUILD_DIR}"
     clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:STATIC_DIR}/artifacts"
 
+    # Ensure vtk compatibility
+    html: python -m pip uninstall --yes vtk
+    html: python -m pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
+
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
     pdf: pdflatex -interaction=nonstopmode -output-directory="{toxinidir}/{env:BUILD_DIR}/latex" "{toxinidir}/{env:BUILD_DIR}/latex/ansys-health-heart.tex"
