--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,7 +57,7 @@ doc = [
     "sphinx-gallery==0.19.0",
     "sphinx-jinja==2.0.2",
     "sphinxcontrib-video==0.4.1",
-    "vtk-osmesa==9.3.20240907.dev0",
+    "vtk-osmesa",
 ]
 tests = [
     "pytest==8.3.5",
