--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ passenv =
     ANSYS_DPF_ACCEPT_LA
     GITHUB_ACTIONS
     ANSYSLMD_LICENSE_FILE
+    PYVISTA*
 
 setenv =
     PYTHONUNBUFFERED = yes
@@ -64,6 +65,7 @@ skip_install =
 setenv =
     SOURCE_DIR = doc/source
     BUILD_DIR = doc/_build
+    PYVISTA_OFFSCREEN = true
     links: BUILDER = linkcheck
     html: BUILDER = html
     pdf: BUILDER = latex
