--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
   rev: v2.4.1
   hooks:
   - id: codespell
-    exclude: ^(tests/heart/assets\/)
+    exclude: ^(tests/heart/assets.*|src/ansys/health/heart/data_examples.*)
     args: [-L solf, "--ignore-words", "doc/styles/config/vocabularies/ANSYS/accept.txt", "-w"]
 
 - repo: https://github.com/pre-commit/pre-commit-hooks
