--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -123,6 +123,7 @@ jobs:
           PYANSYS_HEART_LSDYNA_PLATFORM: windows
           PYANSYS_HEART_LSDYNA_TYPE: "smp"
           LSTC_LICENSE: ansys
+          AWP_ROOT241: C:\Program Files\ANSYS Inc\v241
           MPLBACKEND: Agg
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
         run: |
