--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -76,9 +76,18 @@ jobs:
        run: |
          uv tool run tox -e tests -x testenv.deps+="-e dpf-standalone/v${{ env.ANSYS_VERSION }}" -- -m "${{ matrix.tests.markers }}" -vv
 
+  doc-style:
+    name: Documentation Style Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ansys/actions/doc-style@4f15ff3ab1183912ce862d51b8c66ea124b052a1 # v9.0.2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
+    needs: doc-style
     steps:
 
       - name: "Checkout the project"
@@ -94,6 +103,17 @@ jobs:
           uv tool install tox --with tox-uv
 
       - name: "Build documentation"
+        env:
+          PYANSYS_HEART_FLUENT_VERSION: 24.1
+          PYFLUENT_LAUNCH_CONTAINER: 0
+          PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
+          PYANSYS_HEART_LSDYNA_PLATFORM: windows
+          PYANSYS_HEART_LSDYNA_TYPE: "smp"
+          LSTC_LICENSE: ansys
+          AWP_ROOT241: C:\\Program Files\\ANSYS Inc\\v241
+          MPLBACKEND: Agg
+          PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
+          NIGHTLY_DOC_BUILD: 0
         run: |
           tox -e doc-links,doc-html,doc-pdf
 
