--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -99,7 +99,7 @@ jobs:
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
-  #  needs: doc-style
+    needs: doc-style
     steps:
 
       - name: "Checkout the project"
