--- a/tox.ini
+++ b/tox.ini
@@ -77,7 +77,8 @@ passenv =
     DPF_STANDALONE_PATH
     ANSYS*
     LSTC*
-    * ; Allow all environment variables to be passed to the doc build. Required by PyFluent
+    ; Allow all environment variables to be passed to the doc build. Required by PyFluent
+    *
 
 extras = doc
 commands =
