--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ doc = [
     "myst-parser==4.0.1",
     "numpydoc==1.8.0",
     "nbsphinx==0.9.7",
+    "pypandoc==1.15",
     "sphinx==8.1.3",
     "sphinx-autodoc-typehints==3.0.1",
     "sphinx-copybutton==0.5.2",
